Support varArgs setters too